examples/resolver/checker/pass/return_paths.axo
func choose(const n: Integer): Integer {
    if(n > 0, return(n), return(0))
}

const out = choose(9)
print(out)
