examples/resolver/checker/fail/return_type_mismatch.axo
func bad(): Integer {
    return("nope")
}

print(bad())
